<resources>
    <string name="app_name">Hug</string>
    <string name="title_search">Search</string>
    <string name="title_donate">Donate</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_title_textview">Welcome Back!</string>
    <string name="login_sign_up_title_textview">Sign up</string>

    <!-- Sign up -->
    <string name="signup_title_textview">Create Account</string>
    <string name="signup_login_title_textview">Log in</string>
    <string name="new_donation">New Donation</string>
    <string name="images">Images</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="google_maps_key" />
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
</resources>