<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_fragment_ui"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    tools:context=".ui.signup.SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/primary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="45dp">

                    <ImageView
                        android:id="@+id/signup_img_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/hug_logo_secondary"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signup_img_logo"
                        android:layout_marginTop="30dp"
                        android:paddingLeft="40dp"
                        android:text="@string/signup_title_textview"
                        android:textColor="@color/white"
                        android:textSize="28dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="20dp"
                android:paddingRight="40dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_firstname_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        app:boxCornerRadiusBottomEnd="40dp"
                        app:boxCornerRadiusBottomStart="40dp"
                        app:boxCornerRadiusTopEnd="40dp"
                        app:boxCornerRadiusTopStart="40dp"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_firstname_textInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_phone_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signup_firstname_textInputLayout"
                        android:hint="@string/phone"
                        app:boxCornerRadiusBottomEnd="40dp"
                        app:boxCornerRadiusBottomStart="40dp"
                        app:boxCornerRadiusTopEnd="40dp"
                        app:boxCornerRadiusTopStart="40dp"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_phone_textInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_email_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signup_phone_textInputLayout"
                        android:hint="@string/email"
                        app:boxCornerRadiusBottomEnd="40dp"
                        app:boxCornerRadiusBottomStart="40dp"
                        app:boxCornerRadiusTopEnd="40dp"
                        app:boxCornerRadiusTopStart="40dp"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_email_textInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"/>
                    </com.google.android.material.textfield.TextInputLayout>

<!--                    <com.google.android.material.textfield.TextInputLayout-->
<!--                        android:id="@+id/signup_username_textInputLayout"-->
<!--                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@+id/signup_email_textInputLayout"-->
<!--                        android:hint="Username"-->
<!--                        app:boxCornerRadiusBottomEnd="40dp"-->
<!--                        app:boxCornerRadiusBottomStart="40dp"-->
<!--                        app:boxCornerRadiusTopEnd="40dp"-->
<!--                        app:boxCornerRadiusTopStart="40dp"-->
<!--                        app:boxStrokeColor="@color/primary"-->
<!--                        app:hintTextColor="@color/primary"-->
<!--                        tools:ignore="UnknownId">-->

<!--                        <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:id="@+id/signup_username_textInputEditText"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"/>-->
<!--                    </com.google.android.material.textfield.TextInputLayout>-->

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_password_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signup_email_textInputLayout"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="40dp"
                        app:boxCornerRadiusBottomStart="40dp"
                        app:boxCornerRadiusTopEnd="40dp"
                        app:boxCornerRadiusTopStart="40dp"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_password_textInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signup_confirm_password_textInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signup_password_textInputLayout"
                        android:hint="@string/confirm_password"
                        app:boxCornerRadiusBottomEnd="40dp"
                        app:boxCornerRadiusBottomStart="40dp"
                        app:boxCornerRadiusTopEnd="40dp"
                        app:boxCornerRadiusTopStart="40dp"
                        app:boxStrokeColor="@color/primary"
                        app:hintTextColor="@color/primary"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signup_confirm_password_textInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signup_signup_btn"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_below="@+id/signup_confirm_password_textInputLayout"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/sign_up"
                        android:textSize="18sp"
                        app:cornerRadius="40dp" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/signup_login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signup_signup_btn"
                        android:gravity="right"
                        android:text="@string/signup_login_title_textview"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_baseline_arrow_back_24"
                        app:iconGravity="textStart"
                        app:iconTint="@color/primary"
                        app:strokeWidth="0dp"
                        app:rippleColor="@color/primary"
                        tools:ignore="RtlHardcoded" />

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@+id/signup_signup_btn"-->
<!--                        android:gravity="right">-->

<!--                        -->
<!--                    </LinearLayout>-->
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
